# ricker-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  ricker.py  ricker_cli.py  setup.py
tests/: test_ricker.py
